# Expense-Tracker-

./: .gitignore  Dockerfile  start.sh
backend/: .dockerignore  .env.example  pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  main.py
backend/app/auth/: jwt.py
backend/app/models/: __init__.py  expense.py  user.py
backend/app/routers/: auth.py  expenses.py  oauth.py
backend/app/schemas/: __init__.py  expense.py  user.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js  expenses.js
frontend/src/components/: ExpenseForm.jsx  Layout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AddExpense.jsx  Analytics.jsx  Dashboard.jsx  EditExpense.jsx  Expenses.jsx  Login.jsx  OAuthCallback.jsx  Register.jsx
