[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Expense Tracker API"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.4"
uvicorn = {version = "0.30.6", extras = ["standard"]}
sqlalchemy = "2.0.35"
alembic = "1.13.3"
psycopg2-binary = "2.9.9"
pydantic = {version = "2.7.1", extras = ["email"]}
pydantic-settings = "2.7.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
python-multipart = "0.0.12"
python-dotenv = "1.0.1"
httpx = "0.27.2"
bcrypt = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
